--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@
 # maybe file an issue stating the version you were able to get it working with?
 cmake_minimum_required(VERSION 3.11.2)
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/")
+
 project(libretro-moonlight C)
 
 add_subdirectory(lib)
