Set up some basic connection and decoding callbacks

--- a/src/libgamestream/CMakeLists.txt
+++ b/src/libgamestream/CMakeLists.txt
@@ -12,7 +12,5 @@ set(GAMESTREAM_SOURCES
     xml.c)
 
 add_library(gamestream STATIC ${GAMESTREAM_SOURCES})
+target_include_directories(gamestream PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(gamestream moonlight-common h264bitstream libcurl EXPAT OpenSSL::SSL)
-
-add_executable(gamestream-test test.c)
-target_link_libraries(gamestream-test gamestream)
